# eos

./: CHANGELOG.md  pyproject.toml
eos/campaigns/: campaign_optimizer_manager.py
eos/cli/: sim_cli.py  web_cli.py
eos/configuration/: def_sync.py  protocol_graph.py  utils.py  validation.py
eos/configuration/entities/: task_parameters.py
eos/optimization/: beacon_ai_agent.py  claude_agent_sdk_model.py
eos/orchestration/services/: loading_service.py
eos/scheduling/: base_scheduler.py  cpsat_scheduling_solver.py  simulation.py
eos/web_api/: exception_handling.py
eos/web_api/controllers/: protocol_controller.py  simulator_controller.py  task_controller.py
tests/configuration/: test_identifier_pattern.py  test_task_reference_ordering_validation.py
web_ui/: package-lock.json  package.json
web_ui/app/: globals.css
web_ui/app/api/filesystem/[...path]/: route.ts
web_ui/components/data-table/: ColumnFilters.tsx  DataTable.tsx
web_ui/components/ui/: DescriptionTooltip.tsx  Input.tsx  MultiCombobox.tsx
web_ui/features/campaigns/api/: optimizer.ts
web_ui/features/campaigns/components/: BeaconJournalPanel.tsx  ParetoSolutionsTable.tsx  SubmitCampaignDialog.tsx
web_ui/features/editor/api/: refresh.ts  reload.ts
web_ui/features/editor/components/: EditorClient.tsx  PackageFileTree.tsx
web_ui/features/logs/components/: LogViewer.tsx
web_ui/features/management/api/: labs.ts  protocolTypes.ts  taskPlugins.ts
web_ui/features/management/components/: LabsTab.tsx  ProtocolTypesTab.tsx  TaskPluginsTab.tsx  columns.tsx
web_ui/features/protocol-editor/components/: AssignmentModeSelector.tsx  DeviceAssignment.tsx  ProtocolEditor.tsx  ResourceAssignment.tsx  TaskNode.tsx  TaskPropertiesPanel.tsx
web_ui/features/protocol-editor/utils/: dependencyGraph.ts
web_ui/features/protocol-runs/components/: ProtocolRunExecutionView.tsx  ProtocolRunParameterField.tsx  SubmitProtocolRunDialog.tsx
web_ui/features/simulator/: types.ts
web_ui/features/simulator/components/: DeadlockBanner.tsx  SimulatorClient.tsx  SimulatorForm.tsx  SimulatorGantt.tsx
web_ui/hooks/: useLogStream.ts
web_ui/lib/filesystem/: operations.ts
web_ui/lib/mcp/tools/: filesystem.ts  protocols.ts  register.ts  simulator.ts
web_ui/lib/types/: filesystem.ts  management.ts
web_ui/lib/utils/: assignment-utils.ts  editor-utils.ts  identifier.ts  protocolHelpers.ts
